Fixed ui bug on mobile width

--- a/src/css/scss/styles.scss
+++ b/src/css/scss/styles.scss
@@ -99,7 +99,6 @@ i {
   color: $text-color;
   background-color: $dark-light-color;
   transition: transform 0.3s ease;
-  z-index: 9999;
   &:hover{
     transform: scale(1.1);
   }
@@ -117,6 +116,16 @@ i {
   height: 50px;
   text-align: center;
   margin-bottom: 20px;
+}
+
+@media only screen and (max-width: 470px) {
+  .info-text-container{
+     height: 550px;
+     overflow: scroll;   
+    }
+  #btn-back-to-top {
+    z-index:9999;
+  }
 }
 
 @media only screen and (max-width: 768px) {
